--- a/src/scss/helper/global.scss
+++ b/src/scss/helper/global.scss
@@ -19,10 +19,12 @@ h1, h2, h3 {
 
 h1 {
   font-size: 2.5em;
+  font-weight: bold;
   color: $color-text-title;
 }
 
 p {
+  font-weight: normal;
   color: $color-text-article;
 }
 
